load("@contrib_rules_jvm//java:defs.bzl", "JUNIT5_DEPS", "java_test_suite")
load("@rules_java//java:defs.bzl", "java_binary", "java_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_python//python:defs.bzl", "py_binary")

HANDLERS = glob(["src/main/java/**/*Handler.java"])

INTEGRATION_TESTS = glob(["src/test/java/**/*IntegrationTest.java"])

E2E_TESTS = glob(["src/test/java/**/*E2ETest.java"])

UNIT_TESTS = glob(
    ["src/test/java/**/*Test.java"],
    exclude = INTEGRATION_TESTS + E2E_TESTS,
)

java_library(
    name = "lib",
    srcs = glob(
        ["src/main/java/**/*.java"],
        exclude = HANDLERS,
    ),
    deps = [
        "//lib/dynamodb:lib",
        "//lib/http:lib",
        "//lib/json:lib",
        "//lib/secrets:lib",
        "//lib/time:lib",
        "//third_party/dagger",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:software_amazon_awssdk_dynamodb",
        "@maven//:software_amazon_awssdk_dynamodb_enhanced",
    ],
)

java_binary(
    name = "auth-handler",
    srcs = glob(["src/main/java/com/jordansimsmith/immersiontracker/AuthHandler.java"]),
    create_executable = False,
    resources = [
        "src/main/resources/logback.xml",
    ],
    deps = [
        ":lib",
        "//lib/secrets:lib",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_amazonaws_aws_lambda_java_core",
        "@maven//:com_amazonaws_aws_lambda_java_events",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:software_amazon_awssdk_iam_policy_builder",
    ],
)

java_binary(
    name = "get-progress-handler",
    srcs = glob(["src/main/java/com/jordansimsmith/immersiontracker/GetProgressHandler.java"]),
    create_executable = False,
    resources = [
        "src/main/resources/logback.xml",
    ],
    deps = [
        ":lib",
        "//lib/http:lib",
        "//lib/time:lib",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_amazonaws_aws_lambda_java_core",
        "@maven//:com_amazonaws_aws_lambda_java_events",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:software_amazon_awssdk_dynamodb_enhanced",
    ],
)

java_binary(
    name = "get-shows-handler",
    srcs = glob(["src/main/java/com/jordansimsmith/immersiontracker/GetShowsHandler.java"]),
    create_executable = False,
    resources = [
        "src/main/resources/logback.xml",
    ],
    deps = [
        ":lib",
        "//lib/http:lib",
        "//lib/time:lib",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_amazonaws_aws_lambda_java_core",
        "@maven//:com_amazonaws_aws_lambda_java_events",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:software_amazon_awssdk_dynamodb",
        "@maven//:software_amazon_awssdk_dynamodb_enhanced",
    ],
)

java_binary(
    name = "update-show-handler",
    srcs = glob(["src/main/java/com/jordansimsmith/immersiontracker/UpdateShowHandler.java"]),
    create_executable = False,
    resources = [
        "src/main/resources/logback.xml",
    ],
    deps = [
        ":lib",
        "//lib/http:lib",
        "//lib/time:lib",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_amazonaws_aws_lambda_java_core",
        "@maven//:com_amazonaws_aws_lambda_java_events",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:software_amazon_awssdk_dynamodb",
        "@maven//:software_amazon_awssdk_dynamodb_enhanced",
    ],
)

java_binary(
    name = "sync-episodes-handler",
    srcs = glob(["src/main/java/com/jordansimsmith/immersiontracker/SyncEpisodesHandler.java"]),
    create_executable = False,
    resources = [
        "src/main/resources/logback.xml",
    ],
    deps = [
        ":lib",
        "//lib/http:lib",
        "//lib/time:lib",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_amazonaws_aws_lambda_java_core",
        "@maven//:com_amazonaws_aws_lambda_java_events",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:software_amazon_awssdk_dynamodb",
        "@maven//:software_amazon_awssdk_dynamodb_enhanced",
    ],
)

java_binary(
    name = "sync-youtube-handler",
    srcs = glob(["src/main/java/com/jordansimsmith/immersiontracker/SyncYoutubeHandler.java"]),
    create_executable = False,
    resources = [
        "src/main/resources/logback.xml",
    ],
    deps = [
        ":lib",
        "//lib/http:lib",
        "//lib/time:lib",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_amazonaws_aws_lambda_java_core",
        "@maven//:com_amazonaws_aws_lambda_java_events",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:software_amazon_awssdk_dynamodb",
        "@maven//:software_amazon_awssdk_dynamodb_enhanced",
    ],
)

java_binary(
    name = "sync-spotify-handler",
    srcs = glob(["src/main/java/com/jordansimsmith/immersiontracker/SyncSpotifyHandler.java"]),
    create_executable = False,
    resources = [
        "src/main/resources/logback.xml",
    ],
    deps = [
        ":lib",
        "//lib/http:lib",
        "//lib/time:lib",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_amazonaws_aws_lambda_java_core",
        "@maven//:com_amazonaws_aws_lambda_java_events",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:software_amazon_awssdk_dynamodb",
        "@maven//:software_amazon_awssdk_dynamodb_enhanced",
    ],
)

java_binary(
    name = "sync-movies-handler",
    srcs = glob(["src/main/java/com/jordansimsmith/immersiontracker/SyncMoviesHandler.java"]),
    create_executable = False,
    resources = [
        "src/main/resources/logback.xml",
    ],
    deps = [
        ":lib",
        "//lib/http:lib",
        "//lib/time:lib",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_amazonaws_aws_lambda_java_core",
        "@maven//:com_amazonaws_aws_lambda_java_events",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:software_amazon_awssdk_dynamodb",
        "@maven//:software_amazon_awssdk_dynamodb_enhanced",
    ],
)

java_binary(
    name = "immersion-tracker-tvdb-stub-server",
    srcs = [
        "src/test/java/com/jordansimsmith/immersiontracker/ImmersionTrackerTvdbStubServer.java",
    ],
    create_executable = False,
)

java_binary(
    name = "immersion-tracker-youtube-stub-server",
    srcs = [
        "src/test/java/com/jordansimsmith/immersiontracker/ImmersionTrackerYoutubeStubServer.java",
    ],
    create_executable = False,
)

java_binary(
    name = "immersion-tracker-spotify-accounts-stub-server",
    srcs = [
        "src/test/java/com/jordansimsmith/immersiontracker/ImmersionTrackerSpotifyAccountsStubServer.java",
    ],
    create_executable = False,
)

java_binary(
    name = "immersion-tracker-spotify-api-stub-server",
    srcs = [
        "src/test/java/com/jordansimsmith/immersiontracker/ImmersionTrackerSpotifyApiStubServer.java",
    ],
    create_executable = False,
)

java_library(
    name = "test-lib",
    testonly = True,
    srcs = glob(
        ["src/test/java/**/*.java"],
        exclude = INTEGRATION_TESTS + E2E_TESTS + UNIT_TESTS,
    ),
    data = [
        ":immersion-tracker-spotify-accounts-stub-load",
        ":immersion-tracker-spotify-api-stub-load",
        ":immersion-tracker-tvdb-stub-load",
        ":immersion-tracker-youtube-stub-load",
        ":local-load",
    ],
    resources = ["src/test/resources/test.properties"],
    deps = [
        ":lib",
        "//lib/dynamodb:test-lib",
        "//lib/http:lib",
        "//lib/http:test-lib",
        "//lib/json:lib",
        "//lib/localstack:lib",
        "//lib/secrets:test-lib",
        "//lib/testcontainers:test-lib",
        "//lib/time:test-lib",
        "//third_party/dagger",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_guava_guava",
        "@maven//:org_testcontainers_testcontainers",
        "@maven//:software_amazon_awssdk_dynamodb",
        "@maven//:software_amazon_awssdk_dynamodb_enhanced",
    ],
)

java_test_suite(
    name = "unit-tests",
    size = "small",
    srcs = UNIT_TESTS,
    runner = "junit5",
    test_suffixes = ["Test.java"],
    runtime_deps = JUNIT5_DEPS,
    deps = [
        ":lib",
        ":test-lib",
        "//lib/secrets:lib",
        "//lib/secrets:test-lib",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_mockito_mockito_core",
    ],
)

java_test_suite(
    name = "integration-tests",
    size = "medium",
    srcs = INTEGRATION_TESTS,
    env = {
        "AWS_ACCESS_KEY_ID": "fake",
        "AWS_SECRET_ACCESS_KEY": "fake",
        "AWS_REGION": "ap-southeast-2",
    },
    runner = "junit5",
    test_suffixes = ["IntegrationTest.java"],
    runtime_deps = JUNIT5_DEPS,
    deps = [
        ":auth-handler",
        ":get-progress-handler",
        ":get-shows-handler",
        ":lib",
        ":sync-episodes-handler",
        ":sync-movies-handler",
        ":sync-spotify-handler",
        ":sync-youtube-handler",
        ":test-lib",
        ":update-show-handler",
        "//lib/dynamodb:test-lib",
        "//lib/http:lib",
        "//lib/json:lib",
        "//lib/secrets:test-lib",
        "//lib/testcontainers:test-lib",
        "//lib/time:test-lib",
        "@maven//:com_amazonaws_aws_lambda_java_core",
        "@maven//:com_amazonaws_aws_lambda_java_events",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_testcontainers_junit_jupiter",
        "@maven//:software_amazon_awssdk_dynamodb",
        "@maven//:software_amazon_awssdk_dynamodb_enhanced",
        "@maven//:software_amazon_awssdk_iam_policy_builder",
    ],
)

pkg_tar(
    name = "local-handlers.tar",
    srcs = [
        ":get-progress-handler_deploy.jar",
        ":get-shows-handler_deploy.jar",
        ":sync-episodes-handler_deploy.jar",
        ":sync-movies-handler_deploy.jar",
        ":sync-spotify-handler_deploy.jar",
        ":sync-youtube-handler_deploy.jar",
        ":update-show-handler_deploy.jar",
    ],
    package_dir = "/opt/code/localstack/",
)

pkg_tar(
    name = "local-init-resources.tar",
    srcs = ["src/test/resources/init_resources.py"],
    package_dir = "/etc/localstack/init/ready.d/",
)

oci_image(
    name = "local-image",
    base = "@localstack//:localstack",
    env = {
        "LOCALSTACK_LAMBDA_IGNORE_ARCHITECTURE": 1,
        "LOCALSTACK_LAMBDA_KEEPALIVE_MS": 0,
    },
    tars = [
        ":local-init-resources.tar",
        ":local-handlers.tar",
    ],
)

oci_load(
    name = "local-load",
    image = ":local-image",
    repo_tags = [
        "bazel/immersion-tracker-local:latest",
    ],
)

pkg_tar(
    name = "immersion-tracker-tvdb-stub-server.tar",
    srcs = [
        ":immersion-tracker-tvdb-stub-server_deploy.jar",
    ],
    package_dir = "/opt/code/immersion-tracker-tvdb-stub/",
)

oci_image(
    name = "immersion-tracker-tvdb-stub-image",
    base = "@temurin21jre//:temurin21jre",
    tars = [
        ":immersion-tracker-tvdb-stub-server.tar",
    ],
)

oci_load(
    name = "immersion-tracker-tvdb-stub-load",
    image = ":immersion-tracker-tvdb-stub-image",
    repo_tags = [
        "bazel/immersion-tracker-tvdb-stub:latest",
    ],
)

pkg_tar(
    name = "immersion-tracker-youtube-stub-server.tar",
    srcs = [
        ":immersion-tracker-youtube-stub-server_deploy.jar",
    ],
    package_dir = "/opt/code/immersion-tracker-youtube-stub/",
)

oci_image(
    name = "immersion-tracker-youtube-stub-image",
    base = "@temurin21jre//:temurin21jre",
    tars = [
        ":immersion-tracker-youtube-stub-server.tar",
    ],
)

oci_load(
    name = "immersion-tracker-youtube-stub-load",
    image = ":immersion-tracker-youtube-stub-image",
    repo_tags = [
        "bazel/immersion-tracker-youtube-stub:latest",
    ],
)

pkg_tar(
    name = "immersion-tracker-spotify-accounts-stub-server.tar",
    srcs = [
        ":immersion-tracker-spotify-accounts-stub-server_deploy.jar",
    ],
    package_dir = "/opt/code/immersion-tracker-spotify-accounts-stub/",
)

oci_image(
    name = "immersion-tracker-spotify-accounts-stub-image",
    base = "@temurin21jre//:temurin21jre",
    tars = [
        ":immersion-tracker-spotify-accounts-stub-server.tar",
    ],
)

oci_load(
    name = "immersion-tracker-spotify-accounts-stub-load",
    image = ":immersion-tracker-spotify-accounts-stub-image",
    repo_tags = [
        "bazel/immersion-tracker-spotify-accounts-stub:latest",
    ],
)

pkg_tar(
    name = "immersion-tracker-spotify-api-stub-server.tar",
    srcs = [
        ":immersion-tracker-spotify-api-stub-server_deploy.jar",
    ],
    package_dir = "/opt/code/immersion-tracker-spotify-api-stub/",
)

oci_image(
    name = "immersion-tracker-spotify-api-stub-image",
    base = "@temurin21jre//:temurin21jre",
    tars = [
        ":immersion-tracker-spotify-api-stub-server.tar",
    ],
)

oci_load(
    name = "immersion-tracker-spotify-api-stub-load",
    image = ":immersion-tracker-spotify-api-stub-image",
    repo_tags = [
        "bazel/immersion-tracker-spotify-api-stub:latest",
    ],
)

py_binary(
    name = "sync-episodes-script.py",
    srcs = ["script/sync_episodes.py"],
    main = "script/sync_episodes.py",
    deps = [
        "@pypi//requests",
    ],
)

java_test_suite(
    name = "e2e-tests",
    size = "medium",
    srcs = E2E_TESTS,
    data = [
        ":sync-episodes-script.py",
    ],
    env = {
        "AWS_ACCESS_KEY_ID": "fake",
        "AWS_SECRET_ACCESS_KEY": "fake",
        "AWS_REGION": "ap-southeast-2",
        "IMMERSION_TRACKER_USER": "alice",
        "IMMERSION_TRACKER_PASSWORD": "password",
    },
    resources = [
        "src/test/resources/logback-test.xml",
    ],
    runner = "junit5",
    test_suffixes = ["E2ETest.java"],
    runtime_deps = JUNIT5_DEPS,
    deps = [
        ":lib",
        ":test-lib",
        "//lib/dynamodb:test-lib",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_google_guava_guava",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_testcontainers_junit_jupiter",
        "@maven//:org_testcontainers_testcontainers",
        "@maven//:software_amazon_awssdk_dynamodb",
    ],
)
