load("@contrib_rules_jvm//java:defs.bzl", "JUNIT5_DEPS", "java_test_suite")
load("@rules_java//java:defs.bzl", "java_library")

HANDLERS = glob(
    ["src/main/java/**/*Handler.java"],
    allow_empty = True,
)

INTEGRATION_TESTS = glob(
    ["src/test/java/**/*IntegrationTest.java"],
    allow_empty = True,
)

E2E_TESTS = glob(
    ["src/test/java/**/*E2ETest.java"],
    allow_empty = True,
)

UNIT_TESTS = glob(
    ["src/test/java/**/*Test.java"],
    allow_empty = True,
    exclude = INTEGRATION_TESTS + E2E_TESTS,
)

java_library(
    name = "lib",
    srcs = glob(
        ["src/main/java/**/*.java"],
        exclude = HANDLERS,
    ),
    deps = [
        "//lib/dynamodb:lib",
        "//lib/http:lib",
        "//lib/json:lib",
        "//lib/secrets:lib",
        "//third_party/dagger",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:software_amazon_awssdk_dynamodb",
        "@maven//:software_amazon_awssdk_dynamodb_enhanced",
    ],
)

java_library(
    name = "test-lib",
    testonly = True,
    srcs = glob(
        ["src/test/java/**/*.java"],
        allow_empty = True,
        exclude = INTEGRATION_TESTS + E2E_TESTS + UNIT_TESTS,
    ),
    resources = [
        "src/test/resources/logback-test.xml",
        "src/test/resources/test.properties",
    ],
    deps = [
        ":lib",
        "//lib/dynamodb:test-lib",
        "//lib/http:lib",
        "//lib/json:lib",
        "//lib/secrets:test-lib",
        "//third_party/dagger",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:software_amazon_awssdk_dynamodb",
        "@maven//:software_amazon_awssdk_dynamodb_enhanced",
    ],
)

java_test_suite(
    name = "unit-tests",
    size = "small",
    srcs = UNIT_TESTS,
    runner = "junit5",
    test_suffixes = ["Test.java"],
    runtime_deps = JUNIT5_DEPS,
    deps = [
        ":lib",
        ":test-lib",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
    ],
)

java_test_suite(
    name = "integration-tests",
    size = "medium",
    srcs = INTEGRATION_TESTS,
    env = {
        "AWS_ACCESS_KEY_ID": "fake",
        "AWS_SECRET_ACCESS_KEY": "fake",
        "AWS_REGION": "ap-southeast-2",
    },
    resources = [
        "src/test/resources/logback-test.xml",
    ],
    runner = "junit5",
    test_suffixes = ["IntegrationTest.java"],
    runtime_deps = JUNIT5_DEPS,
    deps = [
        ":lib",
        ":test-lib",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
    ],
)

java_test_suite(
    name = "e2e-tests",
    size = "large",
    srcs = E2E_TESTS,
    env = {
        "AWS_ACCESS_KEY_ID": "fake",
        "AWS_SECRET_ACCESS_KEY": "fake",
        "AWS_REGION": "ap-southeast-2",
    },
    resources = [
        "src/test/resources/logback-test.xml",
    ],
    runner = "junit5",
    test_suffixes = ["E2ETest.java"],
    runtime_deps = JUNIT5_DEPS,
    deps = [
        ":lib",
        ":test-lib",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
    ],
)
